Implementando produtos na pagina

--- a/produtos.html
+++ b/produtos.html
@@ -24,5 +24,28 @@
 		</div>
 	</header>
 
+	<main>
+		<ul class="produtos">
+			<li>
+				<h2>Pizza</h2>
+				<img src="pizza.png">
+				<p class="produto-descricao">Temos 42 sabores de pizzas deliciosas para sua escolha</p>
+				<p class="produto-preco">A paritr de R$ 35,00</p>
+			</li>
+			<li>
+				<h2>Esfiha</h2>
+				<img src="esfiha.png">
+				<p class="produto-descricao">Temos 10 sabores entre esfihas doces e salgadas para sua escolha</p>
+				<p class="produto-preco">A paritr de R$ 4,00</p>
+			</li>
+			<li>
+				<h2>Pizza + Esfiha</h2>
+				<img src="combo.png">
+				<p class="produto-descricao">Você pode levar sua pizza e esfihas juntas com um preço melhor</p>
+				<p class="produto-preco">A paritr de R$ 35,00</p>
+			</li>
+		</ul>	
+	</main>
+
 </body>
 </html>
