--- a/produtos.html
+++ b/produtos.html
@@ -47,5 +47,10 @@
 		</ul>	
 	</main>
 
+	<footer>
+		<img src="logo.png">
+		<p class="copyright">&copy; Copyright Pizza da Casa - 2022</p>
+	</footer>
+
 </body>
 </html>
