--- a/contato.html
+++ b/contato.html
@@ -25,7 +25,18 @@
 	</header>
 
 	<main>
-		teste
+		<form>
+			<label for="nomesobrenome">Nome e sobrenome</label>
+			<input type="text" name="nomesobrenome">
+
+			<label for="email">Email</label>
+			<input type="text" name="email">
+
+			<label for="telefone">Telefone</label>
+			<input type="text" name="telefone">
+
+			<input type="submit" value="Enviar formulário">
+		</form>
 	</main>
 
 <footer>
