--- a/contato.html
+++ b/contato.html
@@ -30,10 +30,10 @@
 			<input type="text" name="nomesobrenome" class="input-padrao">
 
 			<label for="email">Email</label>
-			<input type="text" name="email" class="input-padrao">
+			<input type="email" name="email" class="input-padrao">
 
 			<label for="telefone">Telefone</label>
-			<input type="text" name="telefone" class="input-padrao">
+			<input type="tel" name="telefone" class="input-padrao">
 
 			<label for="mensagem">Mensagem</label>
 			<textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
