--- a/contato.html
+++ b/contato.html
@@ -60,6 +60,38 @@
 
 			<input type="submit" value="Enviar formulário" class="enviar">
 		</form>
+
+		<table>
+			<thead>
+				<tr>
+					<th>Dia</th>
+					<th>Horários</th>
+				</tr>
+			</thead>
+
+			<tbody>
+				<tr>
+					<td>Terça</td>
+					<td>18h ~ 22:30h</td>
+				</tr>
+				<tr>
+					<td>Quarta</td>
+					<td>18h ~ 22:30h</td>
+				</tr>
+				<tr>
+					<td>Quinta</td>
+					<td>18h ~ 22:30h</td>
+				</tr>
+				<tr>
+					<td>Sexta</td>
+					<td>18h ~ 23h</td>
+				</tr>
+				<tr>
+					<td>Sábado</td>
+					<td>18h ~ 23h</td>
+				</tr>
+			</tbody>
+		</table>
 	</main>
 
 <footer>
