--- a/index.html
+++ b/index.html
@@ -4,38 +4,58 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Pizza da Casa</title>
-		<link rel="stylesheet" href="style-home.css">
 
-		<style></style>
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="style.css">
+
 	</head>
 	<body>
-		<h1 class="titulo-principal">Pizza da Casa</h1>
+		<header>
+			<div class="caixa">
+				<h1><img src="logo.png"></h1>
+
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contato.html">Contato</a></li>
+
+					</ul>
+				</nav>
+			</div>
+		</header>
 		
 		<img id="banner" src="banner.jpg">
 		
-		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre a Pizza da Casa</h2>
+		<main>
+			<section class="principal">
+				<h2 class="titulo-centralizado">Sobre a Pizza da Casa</h2>
 
-			<p>Localizada no no bairro Paulo de Biazi a <strong>Pizza da Casa</strong> traz para o mercado o que há de melhor em pizza e esfihas. Fundada em 2012, a pizza da Casa já é destaque na cidade e conquista novos clientes a cada dia.</p>
+				<p>Localizada no no bairro Paulo de Biazi a <strong>Pizza da Casa</strong> traz para o mercado o que há de melhor em pizza e esfihas. Fundada em 2012, a pizza da Casa já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Encantar os clientes com nossa pizza de qualidade e tradição".</strong></em></p>
+				<p id="missao"><em>Nossa missão é: <strong>"Encantar os clientes com nossa pizza de qualidade e tradição".</strong></em></p>
 
-			<p>Oferecemos tradição com forno a lenha e temperos de alta qualidade. O atendimento possui padrão de excelência e agilidade, garantindo a satisfação dos nossos clientes.</p>
-		</div>
+				<p>Oferecemos tradição com forno a lenha e temperos de alta qualidade. O atendimento possui padrão de excelência e agilidade, garantindo a satisfação dos nossos clientes.</p>
+			</section>
 
-		<div class="beneficios">
-			<h3 class="titulo-centralizado">Benefícios</h3>
+			<section class="beneficios">
+				<h3 class="titulo-centralizado">Benefícios</h3>
 
-			<ul>
-				<li class="itens">Atendimento aos CLientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Forno à lenha</li>
-			</ul>
+				<ul>
+					<li class="itens">Atendimento aos Clientes</li>
+					<li class="itens">Espaço diferenciado</li>
+					<li class="itens">Localização</li>
+					<li class="itens">Forno à lenha</li>
+				</ul>
 
-			<img src="beneficios.jpg" class="imagembeneficios">
-		</div>
+				<img src="beneficios.jpg" class="imagembeneficios">
+			</section>
+		</main>
 
+		<footer>
+			<img src="logo.png">
+			<p class="copyright">&copy; Copyright Pizza da Casa - 2022</p>
+		</footer>
 	</body>
 </html>
 
