Refatorando paginal inicial com boas praticas de css

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 			</div>
 		</header>
 		
-		<img id="banner" src="banner.jpg">
+		<img class="banner" src="banner.jpg">
 		
 		<main>
 			<section class="principal">
-				<h2 class="titulo-centralizado">Sobre a Pizza da Casa</h2>
+				<h2 class="titulo-principal">Sobre a Pizza da Casa</h2>
 
 				<p>Localizada no no bairro Paulo de Biazi a <strong>Pizza da Casa</strong> traz para o mercado o que há de melhor em pizza e esfihas. Fundada em 2012, a pizza da Casa já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -39,7 +39,7 @@
 			</section>
 
 			<section class="beneficios">
-				<h3 class="titulo-centralizado">Benefícios</h3>
+				<h3 class="titulo-principal">Benefícios</h3>
 
 				<ul>
 					<li class="itens">Atendimento aos Clientes</li>
