--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 			<section class="principal">
 				<h2 class="titulo-principal">Sobre a Pizza da Casa</h2>
 
+				<img class="utensilios" src="utensilios.jpg" alt="Utensilios de uma pizzaria">
+
 				<p>Localizada no no bairro Paulo de Biazi a <strong>Pizza da Casa</strong> traz para o mercado o que há de melhor em pizza e esfihas. Fundada em 2012, a pizza da Casa já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
 				<p id="missao"><em>Nossa missão é: <strong>"Encantar os clientes com nossa pizza de qualidade e tradição".</strong></em></p>
