--- a/index.html
+++ b/index.html
@@ -46,21 +46,24 @@
 				<h3 class="titulo-principal">Nosso estabelecimento</h3>
 				<p>Venha conhecer nossa pizzaria.</p>	
 
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d463.16271311443336!2d-48.82692638567575!3d-21.768581285546706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bf29c773a14981%3A0x7cf94dadcd48a67b!2sR.%20Profa.%20Romilda%20Supino%20Marcondes%20Cesar%2C%20910%20-%20Am%C3%A9rica%2C%20Ibitinga%20-%20SP%2C%2014940-000!5e0!3m2!1spt-BR!2sbr!4v1662559078445!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<div class="mapa-conteudo">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d463.16271311443336!2d-48.82692638567575!3d-21.768581285546706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bf29c773a14981%3A0x7cf94dadcd48a67b!2sR.%20Profa.%20Romilda%20Supino%20Marcondes%20Cesar%2C%20910%20-%20Am%C3%A9rica%2C%20Ibitinga%20-%20SP%2C%2014940-000!5e0!3m2!1spt-BR!2sbr!4v1662559078445!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
 
 			</section>
-
 			<section class="beneficios">
 				<h3 class="titulo-principal">Benefícios</h3>
 
-				<ul>
-					<li class="itens">Atendimento aos Clientes</li>
-					<li class="itens">Espaço diferenciado</li>
-					<li class="itens">Localização</li>
-					<li class="itens">Forno à lenha</li>
-				</ul>
-
-				<img src="beneficios.jpg" class="imagembeneficios">
+				<div class="conteudo-beneficios">
+					<ul class="lista-beneficios">
+						<li class="itens">Atendimento aos Clientes</li>
+						<li class="itens">Espaço diferenciado</li>
+						<li class="itens">Localização</li>
+						<li class="itens">Forno à lenha</li>
+						<li class="itens">Pizza de qualidade com tradição</li>
+						<li class="itens">Pontualidade</li>
+					</ul><img src="beneficios.jpg" class="imagem-beneficios">
+				</div>
 
 				<div class="video">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/TNV5pr6Ib38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
