--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
 		<title>Pizza da Casa</title>
 
 		<link rel="stylesheet" href="reset.css">
@@ -20,7 +21,6 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="produtos.html">Produtos</a></li>
 						<li><a href="contato.html">Contato</a></li>
-
 					</ul>
 				</nav>
 			</div>
@@ -66,7 +66,7 @@
 				</div>
 
 				<div class="video">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/TNV5pr6Ib38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="100%" height="315" src="https://www.youtube.com/embed/TNV5pr6Ib38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 
 			</section>
